kebabs not camels